# simple-store

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
src/: CMakeLists.txt  main.cpp
src/store/: AppController.cpp  AppController.hpp
src/store/entity/: Entity.cpp  Entity.hpp  Order.cpp  Order.hpp  Product.cpp  Product.hpp
src/store/service/: Catalog.cpp  Catalog.hpp
src/store/view/: View.cpp  View.hpp
src/utils/: Input.cpp  Input.hpp
tests/: CMakeLists.txt  CatalogTest.cpp  IntegrationTest.cpp  OrderTest.cpp  ProductTest.cpp
